--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "scss": "^0.2.4",
     "web-vitals": "^5.1.0"
   },
+  "overrides": {
+    "nth-check": "2.1.1",
+    "typescript": "^4.9.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
